--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "eslint": "^8.14.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^1.4.12",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
